<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_gradient_red_trainer_fitness_instagram_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightRmActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BANNER OR PIC WEIGHTS"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:background="@drawable/shadow_button"
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="336dp"
        android:layout_height="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_9" />

            <Button
                android:id="@+id/btn_10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_10" />

            <Button
                android:id="@+id/btn_11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_11" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_12" />

            <Button
                android:id="@+id/btn_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_3" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_5" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_6" />

            <Button
                android:id="@+id/btn_7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:text="@string/btn_8" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>